Thu May 28 14:01:45 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
          
          Fixed cut/paste error in comment.
          
        * CIDLC/ExecutorMappingGenerator.cpp:
        * CIDLC/ExecImplHeaderGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
        
          Added command line option to generate an IDL module that
          encloses the entire executor IDL file, and
          corresponding 'using namespace' declarations in the
          servant and executor impl header files. This change is
          a temporary fix for build errors occurring when facet
          executor IDL generation is duplicated across IDL files
          for components which have an inheritance relationship
          but are located in separate translation units. Thanks
          to Will Otte <wotte@dre.vanderbilt.edu> for reporting
          the problem and suggesting the fix.

Wed May 27 23:58:23 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Generator/Plan_Generator.mpc:
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.h:
        * MPC/config/ciao_plan_generator.mpb:

          Updates for RACE. 
        
Fri May 22 12:58:33 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/XMI.cpp:

          Warning fixes.

Thu May 21 01:13:28 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/Config_Handlers/ERE_Handler.h:

          fix fuzz.

Wed May 20 01:41:39 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/TargetManager/TargetManager.mpc:
        * DAnCE/TargetManager/TargetManagerExt.idl:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
        * tools/Config_Handlers/ERE_Handler.h:
        * tools/Config_Handlers/Utils/Functors.h:
        * tools/Config_Handlers/XMLSchema/Types.hpp:
        * tools/Config_Handlers/XSCRT/Elements.hpp: